Making the scrolling cart visible and display correctly on mobile.

--- a/public/src/css/styles.less
+++ b/public/src/css/styles.less
@@ -512,3 +512,22 @@ td {
     padding-right: 10px;
   }
 }
+
+// Responsive Styles
+// -------------------------
+
+// Mobile
+// -------------------------
+
+@media screen and (max-width: 480px) {
+.cart-popover {
+  position: fixed;
+  top: 50px !important;
+  left: 50% !important;
+  max-width: 185px;
+  .btn-send-programs {
+    font-size: 130%;
+    padding: 10px;
+  }
+}
+}
